[package]
name = "spectate_lib"
version = "0.0.3"
edition = "2018"
authors = ["Roland Rodriguez <rrrodzilla@protonmail.com>"]
description = "A logging target for env_logger for use by the Spectate client"
repository = "https://github.com/rrrodzilla/spectate_lib"
license = "MIT OR Apache-2.0"
keywords = ["logging", "env_logger", "log", "logger"]
categories = ["development-tools", "development-tools::debugging"]
documentation = "https://docs.rs/spectate_lib/latest/spectate_lib/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
libc = "0.2.117"
prost = "0.9.0"
tokio = { version = "1.16.1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
env_logger = "0.9.0"
log = "0.4.14"
tonic = "0.6.2"
futures-util = "0.3.21"

[build-dependencies]
prost-build = "0.9.0"
tonic-build = "0.6.2"

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.14"
